modify filter tv show to take search text and also aff swagger
